# laserange

./: Cargo.toml
src/: bus.rs  capturer.rs  main.rs  recorder.rs
src/coding/: ffmpeg.rs
src/hits/: detector.rs  manager.rs  mod.rs  processor.rs
src/hits/storage/: file.rs  mod.rs
src/targets/: mod.rs  recognizer.rs  settings.rs
src/util/: point.rs
src/vision/: crop.rs  frame.rs  laser.rs  mod.rs  project.rs  stencil.rs  zones.rs
ui/: CameraFeed.slint  HitManager.slint  main.slint
