[package]
name = "laserslint"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
chrono = "0.4.43"
image = "0.25.9"
imageproc = "0.26.0"
nokhwa = { version = "0.10.10", features = ["input-native"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
slint = "1.14.1"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[build-dependencies]
slint-build = "1.14.1"
